--- a/flexdashboard_spacebudz.Rmd
+++ b/flexdashboard_spacebudz.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "SpaceBudz Dashboard"
+title: "CNFTSTATS - SpaceBudz"
 output: 
   flexdashboard::flex_dashboard:
     orientation: columns
